// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBarGroup /> should match the snapshot 1`] = `
<div
  class="base center_mobile_base root_base"
  style="grid-template-columns: 1fr;"
>
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 16.666666666666664%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 33.33333333333333%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 50%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
</div>
`;

exports[`<ProgressBarGroup /> should should ignore extra labels 1`] = `
<div
  class="base center_mobile_base root_base"
  style="grid-template-columns: auto 1fr;"
>
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    a
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 16.666666666666664%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    b
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 33.33333333333333%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    c
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 50%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
</div>
`;

exports[`<ProgressBarGroup /> should should ignore not break when not enough labels 1`] = `
<div
  class="base center_mobile_base root_base"
  style="grid-template-columns: auto 1fr;"
>
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    a
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 16.666666666666664%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 33.33333333333333%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 50%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
</div>
`;

exports[`<ProgressBarGroup /> should should render a prefix for every value 1`] = `
<div
  class="base center_mobile_base root_base"
  style="grid-template-columns: auto 1fr;"
>
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    a
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 16.666666666666664%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    b
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 33.33333333333333%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
  <span
    class="base textAlign_right root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  >
    c
  </span>
  <div
    class="base 1_mobile_base backgroundColours_gray100_base container_base"
  >
    <div
      class="base 1_mobile_base backgroundColours_green500_base bar_base container_base"
      style="width: 50%;"
    />
  </div>
  <span
    class="base textAlign_left root_base sizes_3_base colours_light_base fontWeight_normal_base base"
  />
</div>
`;
